Snapping closest vertex with Pivot point set to Individual Origins #46892

Closed
opened 2015-11-28 20:45:05 +01:00 by Marek Moravec · 14 comments

System Information
Win 10 64bit, GTX 970 (x2)

Blender Version
Broken: 2,76b official release
Worked: (optional)

Short description of error
If you set Pivot point to Individual Origins and you try to snap the closest vertex it does not work - instead it always uses the Median Snap Target(or maybe Center - I am not sure). I am not completely sure if this is a bug but IMHO it should snap to closest vertex no matter what pivot point do I use.

Exact steps for others to reproduce the error
Snap-Closest.blend

  1. Open the attached blend
  2. In edit mode move the selected cube in x axis and try to snap it to a vertex of the other cube. It does not use the closest vertex but a median point instead.
  3. Solution: Change Pivot point to any other option and the snapping works as expected.
**System Information** Win 10 64bit, GTX 970 (x2) **Blender Version** Broken: 2,76b official release Worked: (optional) **Short description of error** If you set Pivot point to Individual Origins and you try to snap the closest vertex it does not work - instead it always uses the Median Snap Target(or maybe Center - I am not sure). I am not completely sure if this is a bug but IMHO it should snap to closest vertex no matter what pivot point do I use. **Exact steps for others to reproduce the error** [Snap-Closest.blend](https://archive.blender.org/developer/F261101/Snap-Closest.blend) 1. Open the attached blend 2. In edit mode move the selected cube in x axis and try to snap it to a vertex of the other cube. It does not use the closest vertex but a median point instead. 3. Solution: Change Pivot point to any other option and the snapping works as expected.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Traverso

Added subscriber: @Traverso

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Using the 'center' for snapping makes sense normally, but agree in this case its not ideal.

This is a general system though. So having exceptions needs to be handled carefully.

Possible fix, P295

Using the 'center' for snapping makes sense normally, but agree in this case its not ideal. This is a general system though. So having exceptions needs to be handled carefully. Possible fix, [P295](https://archive.blender.org/developer/P295.txt)
Campbell Barton was assigned by Bastien Montagne 2016-01-22 15:34:54 +01:00

Added subscriber: @mont29

Added subscriber: @mont29
Campbell Barton removed their assignment 2016-08-03 06:34:53 +02:00

Removed subscriber: @ideasman42

Removed subscriber: @ideasman42
Germano Cavalcante was assigned by Bastien Montagne 2016-08-03 17:25:41 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

@mano-wii maybe you’ll be interested by this one? You’re our snapping expert now. ;)

@mano-wii maybe you’ll be interested by this one? You’re our snapping expert now. ;)

This comment was removed by @mano-wii

*This comment was removed by @mano-wii*

I don't see the need to calculate islands when translating. I propose to skip the island detection in this case

Possible fix 2, P444

I don't see the need to calculate islands when translating. I propose to skip the island detection in this case Possible fix 2, [P444](https://archive.blender.org/developer/P444.txt)

@mano-wii Meh… don’t really have strong opinion here :/

I’d say, go by your solution, looks like it makes sense, and we can always revert and try something else if it creates other issues (pretty hard to predict what can cause what in that code).

@mano-wii Meh… don’t really have strong opinion here :/ I’d say, go by your solution, looks like it makes sense, and we can always revert and try something else if it creates other issues (pretty hard to predict what can cause what in that code).

Islands could be useful to identify the center of the groups when "Snap Target" is "Center" instead of "Closest".
But it does not work like that now and will not work that way after applying that "possible fix 2".

One solution to this case ( "Snap Target: Center") would be to preserve "island_info" (instead of freeing) and use its information to find the nearest center

Islands could be useful to identify the center of the groups when "Snap Target" is "Center" instead of "Closest". But it does not work like that now and will not work that way after applying that "possible fix 2". One solution to this case ( "Snap Target: Center") would be to preserve "island_info" (instead of freeing) and use its information to find the nearest center

This issue was referenced by 21f3767809

This issue was referenced by 21f376780941f986e99db83793409c3222bca091

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46892
No description provided.